fix: about page mobile vertical spacing

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,6 +1,6 @@
 .about {
   max-width: 800px;
-  margin: 150px auto 100px;
+  margin: 75px auto 0;
 }
 
 .aboutimg {
@@ -8,4 +8,10 @@
   border: 1px solid white;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .about {
+    margin: 150px auto 100px;
+  }
 }
